First version. Calendar working

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@ version av html sidan ska testas mot. -->
     <title>Salt Lake City</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fjalla+One" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <script type="text/javascript" src="js/nav.js"></script>
+    <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -26,11 +25,11 @@ version av html sidan ska testas mot. -->
         <nav id="navbar">
             <ul>
                 <li><a id="thispage" href="index.html">Start</a></li>
-                <li><a href="html/info.html">När kan jag komma?</a></li>
-                <li><a href="html/guest.html">Att göra i Salt Lake</a></li>
-                <li><a href="html/history.html">Att göra runt Salt Lake</a></li>
-                <li><a href="html/contact.html">Boka din resa</a></li>
-                <li><a href="html/members.html">Tips inför resan</a></li>
+                <li><a href="html/when_can_i_come.html">När kan jag komma?</a></li>
+                <li><a href="html/to_do_in_salt_lake.html">Att göra i Salt Lake</a></li>
+                <li><a href="html/to_do_around_salt_lake.html">Att göra runt Salt Lake</a></li>
+                <li><a href="html/book_your_trip.html">Boka din resa</a></li>
+                <li><a href="html/before_the_trip.html">Tips inför resan</a></li>
             </ul>
         </nav>
         <div id="content">
@@ -42,30 +41,16 @@ version av html sidan ska testas mot. -->
                     Vi har samlat ihop tips på vad man kan göra medan man är här, och även på närliggande ställen man kan kombinera denna resa med.
                 </p>
                 <p>
-                    Klicka in på "När kan jag komma?" för att se när vi har lediga tider!
+                    Klicka in på <a href="html/when_can_i_come.html">När kan jag komma?</a> för att se när vi har lediga tider!
                 </p>
             </section>
             <div>
             </div>
             <aside class="col-1">
-                <img src="images/solnedgang.jpg" alt="Solnedgång över hamn med sovande båtar" title="Sovande båtar" height="130" width="200"
-                />
-                <img src="images/garngard-daniel.jpg" alt="Gammal fiskare som ser över sina upphängda nät utanför de små fiskestugorna" title="Fiskenät"
-                    height="135" width="200" />
-                <img src="images/hamn-eva.jpg" alt="Liten båt kör in i hamnöppningen på stilla hav" title="Båt i hamnen" height="120" width="200"
-                />
-                <blockquote>
-                    <p class="centered-text">Bla bla bla bla bla bla bla.</p>
-                </blockquote>
+
             </aside>
         </div>
 
-        <footer>
-            <p>Är <em>du</em> medlem i hamnföreningen och inte har tillgång till medlemssidan? Skicka en e-post till sekreteraren
-                (info@djupvikshamn.se)
-            </p>
-
-        </footer>
     </div>
 </body>
 
