--- a/html/when_can_i_come.html
+++ b/html/when_can_i_come.html
@@ -48,7 +48,7 @@
             </div>
             <div class="color-explanation">
                 <div class="foo blue"></div>
-                <span>Ganska säkert att nån kommer, de kanske inte kommer komma under hela den bokade tiden dock.</span>
+                <span>Någon vill komma, men de har inte bokat än och kanske inte hade tänkt komma under hela tiden.</span>
             </div>
             <div class=" color-explanation">
                 <div class="foo red"></div>
